fix text overflow in tweets

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,11 +31,9 @@ body {
  */
 
 .container {
-   /* width: 90%; */
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
  }
 
 /* Large Devices, Wide Screens */
@@ -45,7 +43,6 @@ body {
     flex-direction: row;
   }
 
-  /* TODO: fix profile header jumping around */
   #main-header {
     position: sticky;
     top: 0;
